Temporarily removed usage discussion

--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -135,459 +135,6 @@
 % key to which the default path will be added. Notice that when a
 % single argument is required, the braces around the argument may be
 % omitted without any error arising.
-% 
-% \begin{function}{%
-%   .apply~keys:n|
-%   .apply~keys:x|
-%   .apply~keys:nn|
-%   .apply~keys:nx}
-%   \begin{syntax}
-%     <key>/.apply~keys:n = \Arg{keyval list}
-%   \end{syntax}
-%   Defines a set of keys to be applied when <key> is called. The usual
-%   parameter |#1| is available.
-%   \begin{texnote}
-%     These are the \textsf{pgfkeys} |.style| handler and relatives.
-%  \end{texnote}
-% \end{function}
-%
-% \begin{function}{%
-%   .boolean:N|
-%   .boolean:c|
-%   .gboolean:N|
-%   .gboolean:c}
-%   \begin{syntax}
-%     <key>/.boolean:N = <Boolean>
-%     <key>/.boolean:c = \Arg{name}
-%   \end{syntax}
-%   Creates <Boolean> switch, and uses the <key> to set the Boolean to
-%   |true| or |false|. Other input raises an error, but with a default
-%   value of |true| set. The behaviour with unknown values is altered
-%   by adding code to \texttt{<key>/unknown}. The |:c| variant uses a
-%   switch \cs{l_<module>_<name>_bool}, with <module> set as described
-%   in secion~\ref{sec:keys:prog}. The |g| variants set the flag
-%   globally.
-% \end{function}
-%
-% \begin{function}{.cd:}
-%   \begin{syntax}
-%     <key>/.cd:
-%   \end{syntax}
-%   Change the current path to <key>. Usually the first property used
-%   when setting up several keys.
-% \end{function}
-%
-% \begin{function}{.choice:}
-%   \begin{syntax}
-%     <key>/.choice:
-%   \end{syntax}
-%   Makes <key> a choice key.  Each possible choice should be stored as
-%   a sub-key of <key>, \emph{i.e.} <key>/<choice>, and should have and
-%   action attached (|.code:n|, |.apply keys:n|, \emph{etc.}). The 
-%   behaviour with unspecified values is altered by adding code to the
-%   \texttt{<key>/unknown} sub-key; initially, this raises an error if
-%   an unknown value is given.
-% \end{function}
-%
-% \begin{function}{.choices:nn}
-%   \begin{syntax}
-%     <key>/.choices:nn = \Arg{choice list} \Arg{code}
-%   \end{syntax}
-%   For a comma-separated <choice list>, creates each <choice> as a
-%   sub-key of the current <key>. The <code> is associated with each
-%   <choice> as if |.code:n| had been run on each one. The <code> can
-%   access the choice made \emph{via} \cs{l_keys_current_choice_tlp}.
-%   The position of the <choice> in the <choice list> is available as
-%   \cs{l_keys_current_choice_int}.
-%   \begin{texnote}
-%     The role of \cs{l_keys_current_choice_tlp} and
-%     \cs{l_keys_current_choice_int} is similar to \cs{val} and \cs{nr}
-%     in the \textsf{xkeyval} manual for the description of
-%     \cs{define@chociekey}.
-%   \end{texnote}
-% \end{function}
-%
-% \begin{function}{%
-%   .code:n|
-%   .code:x}
-%   \begin{syntax}
-%     <key>/.code:n = \Arg{code}
-%   \end{syntax}
-%   Sets <key> to execute <code> when the key is called. The <code>
-%   will be passed a single argument |#1|. This property clears any
-%   others previously set for the key.
-% \end{function}
-%
-% \begin{function}{%
-%   .code:nn|
-%   .code:nx}
-%   \begin{syntax}
-%     <key>/.code:nn = \Arg{parameters} \Arg{code}
-%   \end{syntax}
-%   Sets <key> to execute <code> when the key is called. The function
-%   used will have \TeX\ <parameters>.
-% \end{function}
-%
-% \begin{function}{.default:n}
-%   \begin{syntax}
-%     <key>/.default:n = \Arg{value}
-%   \end{syntax}
-%   Use <value> whenever <key> is given without a value.
-% \end{function}
-%
-% \begin{function}{.equivalent~key:n}
-%   \begin{syntax}
-%     <key>/.equivalent~key:n = <key2>
-%   \end{syntax}
-%   Makes <key2> a key with equivalent meaning to <key>: intended to
-%   make creating alternative spellings or choices simple.
-% \end{function}
-% 
-% \begin{function}{%
-%   .expand:o|
-%   .expand:d|
-%   .expand:x}
-%   \begin{syntax}
-%     <key>/.expand:o = \Arg{value}
-%   \end{syntax}
-%   Expand the given argument once (|o|), twice (|d|) or fully (|x|).
-% \end{function}
-% 
-% \begin{function}{.initial:n}
-%   \begin{syntax}
-%     <key>/.initial:n = \Arg{value}
-%   \end{syntax}
-%   Initialise <key> with <value>, until a second assignment is made.
-% \end{function}
-%
-% \begin{function}{.inverse~key:n}
-%   \begin{syntax}
-%     <key>/.inverse key:n = \Arg{name}
-%   \end{syntax}
-%   Creates a new key <name> as an inverse of existing Boolean <key>.
-%   The inverse key will work in the opposite sense to the parent. Thus
-%   setting <name> to \texttt{true} is the same as setting <key> to
-%   \texttt{false}.
-% \end{function}
-%
-% \begin{function}{%
-%   .key~to~tlp:N|
-%   .key~to~tlp:c}
-%   \begin{syntax}
-%     <key>/.key~to~tlp:N = <tlp>
-%   \end{syntax}
-%   Set <tlp> equal to the current contents of <key>.
-% \end{function}
-%
-% \begin{function}{%
-%   .let~to~func:N|
-%   .let~to~func:c}
-%   \begin{syntax}
-%     <key>/.let~to~func:N = <function>
-%   \end{syntax}
-%   When <key> is called, the argument will be \cs{let:NN} to
-%   <function>. The \texttt{:c} variant creates a function 
-%   \cs{<module>_<function>:w}, using the current <module> (if set)
-%   in the same way as the \texttt{.store~in} keys. Note that in this
-%   case the function created has a \texttt{:w} argument specifier, as
-%   \textsf{keys3} does not have any clue as to the arguments required.
-% \end{function}
-%
-% \begin{function}{.module:}
-%   \begin{syntax}
-%     <key>/.module:
-%   \end{syntax}
-%   Declares <key> as a module name: giving <key> alone is then the
-%   same as giving <key>/.cd:, but is a little faster.
-% \end{function}
-%
-% \begin{function}{%
-%   .show~code:|
-%   .show:}
-%   \begin{syntax}
-%     <key>/.show code:
-%     <key>/.show:
-%   \end{syntax}
-%   Show the contents of the key macro itself or the hidden property
-%   storing |.code:n|. May be useful for debugging, but note that all
-%   |._cmd:w| keys have a delimited argument ending \cs{q_keys_stop}.
-% \end{function}
-%
-% \begin{function}{%
-%   .store~in~int:N|
-%   .store~in~int:c|
-%   .gstore~in~int:N|
-%   .gstore~in~int:c}
-%   \begin{syntax}
-%     <key>/.store~in~int:N = <int>
-%     <key>/.store~in~int:c = \Arg{name}
-%   \end{syntax}
-%   When <key> is called, store the value in <int>. No check is made on the
-%   <int> at definition time: when the key is used, the value is stored
-%   with no checks. For the |:c| variant, an int of name
-%   \cs{l_<module>_<name>_int} is used for the storage. The <module>
-%   value is defined by |/keys/.current module:n| as described in
-%   section~\ref{sec:keys:prog}. The |g| variants are global.
-% \end{function}
-% 
-% \begin{function}{%
-%   .store~in~skip:N|
-%   .store~in~skip:c|
-%   .gstore~in~skip:N|
-%   .gstore~in~skip:c}
-%   \begin{syntax}
-%     <key>/.store~in~skip:N = <skip>
-%     <key>/.store~in~skip:c = \Arg{name}
-%   \end{syntax}
-%   When <key> is called, store the value in <skip>. No check is made on
-%   the <skip> at definition time: when the key is used, the value is 
-%   stored with no checks. For the |:c| variant, a skip of name
-%   \cs{l_<module>_<name>_skip} is used for the storage. The <module>
-%   value is defined by |/keys/.current module:n| as described in
-%   section~\ref{sec:keys:prog}. The |g| variants are global.
-% \end{function}
-%
-% \begin{function}{%
-%   .store~in~tlp:N|
-%   .store~in~tlp:c|
-%   .estore~in~tlp:N|
-%   .estore~in~tlp:c|
-%   .gstore~in~tlp:N|
-%   .gstore~in~tlp:c|
-%   .xstore~in~tlp:N|
-%   .xstore~in~tlp:c}
-%   \begin{syntax}
-%     <key>/.store~in~tlp:N = <tlp>
-%     <key>/.store~in~tlp:c = \Arg{name}
-%   \end{syntax}
-%   When <key> is called, store the value in <tlp>. The |xstore| variant
-%   expands the value at the point of storage. No check is made on the
-%   <tlp> at definition time: when the key is used, the value is stored
-%   with no checks. For the |:c| variant, a tlp of name
-%   \cs{l_<module>_<name>_tlp} is used for the storage. The <module>
-%   value is defined by |/keys/.current module:n| as described in
-%   section~\ref{sec:keys:prog}. the variant forms follow the \TeX\
-%   convention for \cs{def}: |e| = expanded, |g|  = global, |x| = global
-%   and expanded.
-% \end{function}
-% 
-% \begin{function}{%
-%   .store~in~toks:N|
-%   .store~in~toks:c|
-%   .gstore~in~toks:N|
-%   .gstore~in~toks:c}
-%   \begin{syntax}
-%     <key>/.store~in~toks:N = <toks>
-%     <key>/.store~in~toks:c = \Arg{name}
-%   \end{syntax}
-%   When <key> is called, store the value in <toks>. No check is made on 
-%   the <int> at definition time: when the key is used, the value is 
-%   stored  with no checks. For the |:c| variant, a toks of name
-%   \cs{l_<module>_<name>_toks} is used for the storage. The <module>
-%   value is defined by |/keys/.current module:n| as described in
-%   section~\ref{sec:keys:prog}. The |g| variants are global.
-% \end{function}
-%
-% \begin{function}{%
-%   .tlp~to~key:N|
-%   .tlp~to~key:c}
-%   \begin{syntax}
-%     <key>/.tlp~to~key:N = <tlp>
-%   \end{syntax}
-%   Set <key> equal to the current contents of <tlp>.
-% \end{function}
-%
-% \begin{function}{%
-%   .try:n|
-%   .retry:n}
-%   \begin{syntax}
-%     <key>/.try:n = \Arg{value}
-%   \end{syntax}
-%   Attempts to set <key> with <value>, with no errors occurring if the
-%   <key> is not defined.  |.retry:n| only attempts to set the key if
-%   a previous |.try:n| has failed.
-% \end{function}
-%
-%\subsubsection{Programmers keys}
-%\label{sec:keys:prog}
-%
-% As well as the pre-defined property and error keys, the key
-% |/keys/execute:n| is available to run arbitrary code. This can be
-% used to carry out any necessary definitions without leaving
-% \cs{keys_manage:n}.
-%
-% The key |/keys/current module:n| is used to set the name of the
-% current module for use with properties |.boolean:c| and
-% \texttt{.store in \ldots}. If this key has been set, the module 
-% name is used when creating |_bool| and |_tlp| storage.
-%\begin{verbatim}
-%  \keys_manage:n {
-%    /module/.cd:,
-%    key one/.boolean:c       = one,    % Uses \l_one_bool
-%    key two/.store in tlp:c  = two,    % Uses \l_two_tlp
-%    /keys/current module:n   = module,
-%    key three/.boolean:c     = three,  % Uses \l_module_three_bool
-%    key four/.store in tlp:c = four,   % Uses \l_module_four_tlp
-%  }
-%\end{verbatim}
-% As illustrated, an additional ``|_|'' is included in the name when a
-% module name is available.  The current module name is reset to no
-% value for each call to \cs{keys_manage:n}.
-%
-%\subsection{Creating choices}
-%
-% Choices can be created using either the |.choice:| or |.choices:nn|
-% properties.  The first of these makes the current key a choice, and
-% leaves it to the programmer to create each choice key separately. This
-% is therefore best suited when each choice is rather different.
-%\begin{verbatim}
-%  \keys_manage:n {
-%    /module/.cd:
-%    key/.choice:,
-%    key/.cd:,
-%      egg/.code:n        = <some code>,
-%      cheese/.code:x     = <some expanded code>,
-%      fish/.apply keys:n = <some extra keys>
-%  }
-%\end{verbatim}
-%
-% On the other hand, the |.choices:nn| property is intended to be
-% useful when the choices are rather similar.  The tlp
-% \cs{l_keys_current_choice_tlp}, which contains the choice name, can
-% be used in the construction of csnames, \emph{etc}.
-%\begin{verbatim}
-%  \keys_manage:n {
-%    /module/.cd:
-%    key/.choices:nn =
-%      {egg,cheese,fish}{You asked for \l_keys_current_choice_tlp!}
-%  }
-%\end{verbatim}
-%
-% Extra keys can be added to those generated by |.choices:nn| by creating
-% sub-keys of the choice key. Unknown values can also be handled using
-% the \texttt{unknown} choice.
-%\begin{verbatim}
-%  \keys_manage:n {
-%    /module/.cd:
-%    key/.choices:nn =
-%      {egg,cheese,fish}{You asked for \l_keys_current_choice_tlp!},
-%    key/unknown/.code:n =
-%      {I don't known \l_keys_current_choice_tlp}
-%  }
-%\end{verbatim}
-%
-%\subsection{Functions}
-% 
-%\subsection{Variables and constants}
-%
-% \begin{variable}{\c_keys_cs_prefix_tlp}
-%   Constant that contains the prefix for the csnames used for all
-%   keys.
-%   \begin{texnote}
-%     The key macros are all of the form \cs{keys-root/<path>/<key>}, 
-%     where  <path> can be equal to <module> or may be more complex. The
-%     <property> keys are of form \cs{keys/<path>/<key>/.<property>}.
-%   \end{texnote}
-% \end{variable}
-%
-% \begin{variable}{\c_keys_root_tlp}
-%   Constant that contains the ``root path'' for keys.
-% \end{variable}
-%
-% \begin{variable}{%
-%   \c_keys_errors_path_tlp|
-%   \c_keys_properties_path_tlp|
-%   \c_keys_utilities_path_tlp}
-%   The paths of the error handling, property and utility keys.
-% \end{variable}
-%
-% \begin{variable}{\c_keys_err_tlp}
-%   Constant that contains the name of the error file in use.
-% \end{variable}
-%
-% \begin{variable}{%
-%   \l_keys_current_path_tlp|
-%   \l_keys_default_path_tlp|
-%   \l_keys_choice_path_tlp}
-%   The values of the current and default search paths, plus a saved
-%   value if a choice is being created.
-% \end{variable}
-%
-% \begin{variable}{%
-%   \l_keys_current_key_full_tlp|
-%   \l_keys_current_key_name_tlp}
-%   The values of current fully qualified key name (including path) and
-%   key name alone.
-% \end{variable}
-%
-% \begin{variable}{\l_keys_current_value_tlp}
-%   The current value of the key.
-% \end{variable}
-%
-% \begin{variable}{\l_keys_current_module_tlp}
-%   The name of the current module.
-% \end{variable}
-%
-% \begin{variable}{%
-%   \l_keys_current_choice_tlp|
-%   \l_keys_current_choice_int}
-%   Marker information for choices.
-% \end{variable}
-%
-% \begin{variable}{%
-%   \l_keys_err_boolean_expected_tlp|
-%   \l_keys_err_def_x_args_tlp|
-%   \l_keys_err_not_boolean_tlp|
-%   \l_keys_err_unknown_choice_tlp|
-%   \l_keys_err_unknown_key_tlp|
-%   \l_keys_err_value_ignored_tlp|
-%   \l_keys_err_value_required_tlp}
-%   Error message identifiers.
-% \end{variable}
-%
-% \begin{variable}{\l_keys_success_bool}
-%   Boolean for success.
-% \end{variable}
-%
-% \begin{variable}{\l_keys_tmpa_tlp}
-%   A scratch tlp.
-% \end{variable}
-%
-%\subsection{Internal properties}
-%
-% The private key properties are used internally by \textsf{keys3}.
-% They should not be addressed directly except from within the package.
-% All private properties contain ``|_|'' before the property name as a
-% reminder that they are internal.
-%
-% \begin{function}{/._boolean}
-%   \begin{syntax}
-%   \end{syntax}
-%   Stores the name of the switch used by a Boolean key, and also
-%   indicates that the <key> is a Boolean.
-% \end{function}
-%
-% \begin{function}{/._cmd:w}
-%   \begin{syntax}
-%   \end{syntax}
-%   Executes code stored for <key>.  The argument of the function is
-%   delimited by \cs{q_keys_stop}.
-% \end{function}
-%
-% \begin{function}{/._default_tlp}
-%   \begin{syntax}
-%   \end{syntax}
-%   Stores the default value for <key>.
-% \end{function}
-%
-% \begin{function}{%
-%   /._forbidden_bool|
-%   /._required_bool}
-%   \begin{syntax}
-%   \end{syntax}
-%   Indicates that a value is forbidden or required for <key>.
-% \end{function}
-%
 %
 %\subsection{Implementation}
 %
@@ -686,15 +233,6 @@
 \quark_new:N \q_keys_stop
 %    \end{macrocode}
 %\end{macro}
-%\begin{macro}{\l_keys_args_toks}
-%\begin{macro}{\l_keys_body_toks}
-% Storage areas used to add code to an existing key.
-%    \begin{macrocode}
-\toks_new:N \l_keys_args_toks
-\toks_new:N \l_keys_body_toks
-%    \end{macrocode}
-%\end{macro}
-%\end{macro}
 %\begin{macro}{\l_keys_success_bool}
 % A switch for trying keys.
 %    \begin{macrocode}
@@ -790,8 +328,6 @@
 % To avoid problem on redefinition, all properties are removed.
 %    \begin{macrocode}
 \cs_new:NNn \keys_clear_properties:n 1 {
-  \keys_undefine:n { #1/._args_toks }
-  \keys_undefine:n { #1/._body_toks }
   \keys_undefine:n { #1/._boolean }     
   \keys_undefine:n { #1/._cmd:w }      
   \keys_undefine:n { #1/._default_tlp }  
@@ -1082,6 +618,7 @@
 %\begin{macro}{\keys_boolean:nc}
 % To allow code-sharing for switch control.
 %    \begin{macrocode}
+\toks_new:N \l_keys_body_toks
 \cs_new:Npn \keys_boolean:nN #1#2 {
   \cs_if_free:NT #1 {\bool_new:N #2}
   \keys_parse_list:n {
@@ -1142,34 +679,27 @@
 %    \end{macrocode}
 %\end{macro}
 
-%\begin{macro}{\keys_def_cmd:cn}
+%\begin{macro}{\keys_def_cmd:nn}
 %\begin{macro}{\keys_def_cmd:cx}
-%\begin{macro}{\keys_def_cmd:cnn}
-%\begin{macro}{\keys_def_cmd:cnx}
+%\begin{macro}{\keys_def_cmd:nnn}
+%\begin{macro}{\keys_def_cmd:nnx}
 % Creating the |._cmd:w| keys happens here.
 %    \begin{macrocode}
-\cs_new:Npn \keys_def_cmd:cn #1#2 {
+\cs_new:NNn \keys_def_cmd:nn 2 {
   \keys_clear_properties:n {#1}
-  \cs_set:cpn {\c_keys_cs_prefix_tlp #1/._cmd:w} ##1 \q_keys_stop {#2}
+  \cs_set:cNn { \c_keys_cs_prefix_tlp #1 /._cmd:w } 1 {#2}
 }
 \cs_new:Npn \keys_def_cmd:cx #1#2 {
   \keys_clear_properties:n {#1}
   \cs_set:cpx {\c_keys_cs_prefix_tlp #1/._cmd:w} ##1 \q_keys_stop {#2}
 }
-\cs_new:Npn \keys_def_cmd:cnn #1#2#3 {
+\cs_new:NNn \keys_def_cmd:nNn 3 {
   \keys_clear_properties:n {#1}
-  \cs_set:cpn {\c_keys_cs_prefix_tlp #1/._cmd:w} #2 \q_keys_stop {#3}
-  \keys_toks_new:nn {#1/._args_toks} {#2}
-  \keys_toks_new:nn {#1/._body_toks} {#3}
+  \cs_set:cNn { \c_keys_cs_prefix_tlp #1 /._cmd:w } #2 {#3}
 }
-\cs_new:Npn \keys_def_cmd:cnx #1#2#3 {
+\cs_new:Npn \keys_def_cmd:nnx #1#2#3 {
   \keys_clear_properties:n {#1}
   \cs_set:cpx {\c_keys_cs_prefix_tlp #1/._cmd:w} #2 \q_keys_stop {#3}
-  \keys_toks_new:nn {#1/._args_toks} {#2}
-  \keys_toks_new:nn {#1/._body_toks} {
-    \exp_not:n{\keys_err_use:cw {def_x_args} \l_keys_current_key_full_tlp}
-    #3
-  }
 }
 %    \end{macrocode}
 %\end{macro}
@@ -1216,14 +746,17 @@
 % uses them in a ``safe'' way.
 %    \begin{macrocode}
 \cs_new:Npn \keys_use_cmd:c #1 {
+  \showthe\l_keys_current_value_toks
   \exp_args:Nno \keys_use_cmd:cn {#1}
     {\toks_use:N \l_keys_current_value_toks}
 }
 \cs_new:Npn \keys_use_cmd:cn #1#2 {
   \bool_if:NTF \l_keys_no_value_bool {
-    \keys_use:n {#1/._cmd:w} \q_keys_stop
+    \keys_use:n {#1/._cmd:w} { }
   }{
-    \keys_use:n {#1/._cmd:w} #2 \q_keys_stop
+    %\tempa{#2}\show\tempa
+    %\expandafter\show\csname keys-root/#1/.cmd:w
+    \keys_use:n {#1/._cmd:w} {#2}
   }
 }
 %    \end{macrocode}
@@ -1343,11 +876,11 @@
 %
 % The |.code:n| and |.code:nn| properties have to be defined directly.
 %    \begin{macrocode}
-\keys_def_cmd:cn {\c_keys_properties_path_tlp /.code:n} {
-  \keys_def_cmd:cn {\l_keys_current_path_tlp} {#1}
+\keys_def_cmd:nn { \c_keys_properties_path_tlp /.code:n } {
+  \keys_def_cmd:nn { \l_keys_current_path_tlp } {#1}
 }
-\keys_def_cmd:cnn {\c_keys_properties_path_tlp /.code:nn} {#1#2} {
-  \keys_def_cmd:cnn {\l_keys_current_path_tlp} {#1} {#2}
+\keys_def_cmd:nNn { \c_keys_properties_path_tlp /.code:nn } 2 {
+  \keys_def_cmd:nNn { \l_keys_current_path_tlp } #1 {#2}
 }
 %    \end{macrocode}
 %
@@ -1366,303 +899,303 @@
 %    \end{macrocode}
 % The two |:x| definition methods need to be created.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.code:x/.code:n = {
-    \keys_def_cmd:cx {\l_keys_current_path_tlp} {#1}
-  },
-  \c_keys_properties_path_tlp /.code:nx/.code:nn = {#1#2} {
-    \keys_def_cmd:cnx {\l_keys_current_path_tlp} {#1} {#2}
-  },
+%  \c_keys_properties_path_tlp /.code:x/.code:n = {
+%    \keys_def_cmd:cx {\l_keys_current_path_tlp} {#1}
+%  },
+%  \c_keys_properties_path_tlp /.code:nx/.code:nn = {#1#2} {
+%    \keys_def_cmd:nnx {\l_keys_current_path_tlp} {#1} {#2}
+%  },
 %    \end{macrocode}
 % Initial and default values can now be created.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.initial:n/.code:n = {
-    \keys_set:nn {\l_keys_current_path_tlp} {#1}
-  },
-  \c_keys_properties_path_tlp /.default:n/.code:n = {
-    \keys_set:nn {\l_keys_current_path_tlp /._default_tlp} {#1}
-  },
+%  \c_keys_properties_path_tlp /.initial:n/.code:n = {
+%    \keys_set:nn {\l_keys_current_path_tlp} {#1}
+%  },
+%  \c_keys_properties_path_tlp /.default:n/.code:n = {
+%    \keys_set:nn {\l_keys_current_path_tlp /._default_tlp} {#1}
+%  },
 %    \end{macrocode}
 % Values are either required or forbidden, with the appropriate error
 % messages. 
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.value~required:/.code:n = {
-    \keys_bool_new:n {\l_keys_current_path_tlp /._required_bool}
-  },
-  \c_keys_errors_path_tlp /value~required/.code:n = {
-    \keys_err_use:cw {value_required} \l_keys_current_key_full_tlp
-  },
-  \c_keys_properties_path_tlp /.value~forbidden:/.code:n = {
-    \keys_bool_new:n {\l_keys_current_path_tlp /._forbidden_bool}
-  },
-  \c_keys_errors_path_tlp /value~forbidden/.code:n = {
-    \keys_err_use:cw {value_forbidden} \l_keys_current_key_full_tlp
-  },
+%  \c_keys_properties_path_tlp /.value~required:/.code:n = {
+%    \keys_bool_new:n {\l_keys_current_path_tlp /._required_bool}
+%  },
+%  \c_keys_errors_path_tlp /value~required/.code:n = {
+%    \keys_err_use:cw {value_required} \l_keys_current_key_full_tlp
+%  },
+%  \c_keys_properties_path_tlp /.value~forbidden:/.code:n = {
+%    \keys_bool_new:n {\l_keys_current_path_tlp /._forbidden_bool}
+%  },
+%  \c_keys_errors_path_tlp /value~forbidden/.code:n = {
+%    \keys_err_use:cw {value_forbidden} \l_keys_current_key_full_tlp
+%  },
 %    \end{macrocode}
 % Being able to change path is pretty useful.
 %    \begin{macrocode}
   \c_keys_properties_path_tlp /.cd:/.code:n = {
     \tlp_set:Nx \l_keys_default_path_tlp {\l_keys_current_path_tlp /}
   },
-  \c_keys_properties_path_tlp /.module:/.code:n = {
-    \keys_manage_internal:n {
-      \l_keys_current_path_tlp /.code:x = {
-        \exp_not:N \tlp_set:Nx \exp_not:N \l_keys_default_path_tlp
-          {\l_keys_current_path_tlp /}
-      }
-    }
-  },
+%  \c_keys_properties_path_tlp /.module:/.code:n = {
+%    \keys_manage_internal:n {
+%      \l_keys_current_path_tlp /.code:x = {
+%        \exp_not:N \tlp_set:Nx \exp_not:N \l_keys_default_path_tlp
+%          {\l_keys_current_path_tlp /}
+%      }
+%    }
+%  },
 %    \end{macrocode}
 % Pre-built lists of keys can be created for regular use.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.apply~keys:n/.code:n = {
-    \keys_manage_internal:n {
-      \l_keys_current_path_tlp /.code:n = {\keys_parse_list:n {#1}}
-    }
-  },
-  \c_keys_properties_path_tlp /.apply~keys:x/.code:n = {
-    \keys_manage_internal:n {
-      \l_keys_current_path_tlp /.code:x = {
-        \exp_not:N \keys_parse_list:n {#1}
-      }
-    }
-  },
-  \c_keys_properties_path_tlp /.apply~keys:nn/.code:nn = {#1#2} {
-    \keys_manage_internal:n {
-      \l_keys_current_path_tlp /.code:nn = {#1} {\keys_parse_list:n {#2}}
-    }
-  },
-  \c_keys_properties_path_tlp /.apply~keys:nx/.code:nn = {#1#2} {
-    \keys_manage_internal:n {
-      \l_keys_current_path_tlp /.code:x =
-        {#1} {\exp_not:N \keys_parse_list:n {#2}}
-    }
-  },
+%  \c_keys_properties_path_tlp /.apply~keys:n/.code:n = {
+%    \keys_manage_internal:n {
+%      \l_keys_current_path_tlp /.code:n = {\keys_parse_list:n {#1}}
+%    }
+%  },
+%  \c_keys_properties_path_tlp /.apply~keys:x/.code:n = {
+%    \keys_manage_internal:n {
+%      \l_keys_current_path_tlp /.code:x = {
+%        \exp_not:N \keys_parse_list:n {#1}
+%      }
+%    }
+%  },
+%  \c_keys_properties_path_tlp /.apply~keys:nn/.code:nn = {#1#2} {
+%    \keys_manage_internal:n {
+%      \l_keys_current_path_tlp /.code:nn = {#1} {\keys_parse_list:n {#2}}
+%    }
+%  },
+%  \c_keys_properties_path_tlp /.apply~keys:nx/.code:nn = {#1#2} {
+%    \keys_manage_internal:n {
+%      \l_keys_current_path_tlp /.code:x =
+%        {#1} {\exp_not:N \keys_parse_list:n {#2}}
+%    }
+%  },
 %    \end{macrocode}
 % Transfer of data in and out.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.key~to~tlp:N/.code:n = {
-    \tlp_set_eq:Nc #1 {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp}
-  },
-  \c_keys_properties_path_tlp /.key~to~tlp:c/.code:n = {
-    \tlp_set_eq:cc {#1} {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp}
-  },
-  \c_keys_properties_path_tlp /.tlp~to~key:N/.code:n = {
-    \tlp_set_eq:cN {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp} #1
-  },
-  \c_keys_properties_path_tlp /.tlp~to~key:c/.code:n = {
-    \tlp_set_eq:cc {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp} {#1}
-  },
+%  \c_keys_properties_path_tlp /.key~to~tlp:N/.code:n = {
+%    \tlp_set_eq:Nc #1 {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp}
+%  },
+%  \c_keys_properties_path_tlp /.key~to~tlp:c/.code:n = {
+%    \tlp_set_eq:cc {#1} {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp}
+%  },
+%  \c_keys_properties_path_tlp /.tlp~to~key:N/.code:n = {
+%    \tlp_set_eq:cN {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp} #1
+%  },
+%  \c_keys_properties_path_tlp /.tlp~to~key:c/.code:n = {
+%    \tlp_set_eq:cc {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp} {#1}
+%  },
 %    \end{macrocode}
 % That is all of the lower-level things done.  Now use them to build
 % some higher-level functionality.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.store~in~tlp:N/.code:n = {
-    \keys_store:NN \tlp_set:Nn #1
-  },
-  \c_keys_properties_path_tlp /.estore~in~tlp:N/.code:n = {
-    \keys_store:NN \tlp_set:Nx #1
-  },
-  \c_keys_properties_path_tlp /.store~in~tlp:c/.code:n = {
-    \keys_store:Nc \tlp_set:cn {#1}
-  },
-  \c_keys_properties_path_tlp /.estore~in~tlp:c/.code:n = {
-    \keys_store:Nc \tlp_set:cx {#1}
-  },
-  \c_keys_properties_path_tlp /.store~in~int:N/.code:n = {
-    \keys_store:NN \int_set:Nn #1
-  },
-  \c_keys_properties_path_tlp /.store~in~int:c/.code:n = {
-    \keys_store:Nc \int_set:cn {#1}
-  },
-  \c_keys_properties_path_tlp /.store~in~skip:N/.code:n = {
-    \keys_store:NN \skip_set:Nn #1
-  },
-  \c_keys_properties_path_tlp /.store~in~skip:c/.code:n = {
-    \keys_store:Nc \skip_set:cn {#1}
-  },
-  \c_keys_properties_path_tlp /.store~in~toks:N/.code:n = {
-    \keys_store:NN \toks_set:Nn #1
-  },
-  \c_keys_properties_path_tlp /.store~in~toks:c/.code:n = {
-    \keys_store:Nc \toks_set:cn {#1}
-  },
+%  \c_keys_properties_path_tlp /.store~in~tlp:N/.code:n = {
+%    \keys_store:NN \tlp_set:Nn #1
+%  },
+%  \c_keys_properties_path_tlp /.estore~in~tlp:N/.code:n = {
+%    \keys_store:NN \tlp_set:Nx #1
+%  },
+%  \c_keys_properties_path_tlp /.store~in~tlp:c/.code:n = {
+%    \keys_store:Nc \tlp_set:cn {#1}
+%  },
+%  \c_keys_properties_path_tlp /.estore~in~tlp:c/.code:n = {
+%    \keys_store:Nc \tlp_set:cx {#1}
+%  },
+%  \c_keys_properties_path_tlp /.store~in~int:N/.code:n = {
+%    \keys_store:NN \int_set:Nn #1
+%  },
+%  \c_keys_properties_path_tlp /.store~in~int:c/.code:n = {
+%    \keys_store:Nc \int_set:cn {#1}
+%  },
+%  \c_keys_properties_path_tlp /.store~in~skip:N/.code:n = {
+%    \keys_store:NN \skip_set:Nn #1
+%  },
+%  \c_keys_properties_path_tlp /.store~in~skip:c/.code:n = {
+%    \keys_store:Nc \skip_set:cn {#1}
+%  },
+%  \c_keys_properties_path_tlp /.store~in~toks:N/.code:n = {
+%    \keys_store:NN \toks_set:Nn #1
+%  },
+%  \c_keys_properties_path_tlp /.store~in~toks:c/.code:n = {
+%    \keys_store:Nc \toks_set:cn {#1}
+%  },
 %    \end{macrocode}
 % Global versions of all of the above storage properties.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.gstore~in~tlp:N/.code:n = {
-    \keys_store:NN \tlp_gset:Nn #1
-  },
-  \c_keys_properties_path_tlp /.xstore~in~tlp:N/.code:n = {
-    \keys_store:NN \tlp_gset:Nx #1
-  },
-  \c_keys_properties_path_tlp /.gstore~in~tlp:c/.code:n = {
-    \keys_store:Nc \tlp_gset:cn {#1}
-  },
-  \c_keys_properties_path_tlp /.xstore~in~tlp:c/.code:n = {
-    \keys_store:Nc \tlp_gset:cx {#1}
-  },
-  \c_keys_properties_path_tlp /.gstore~in~int:N/.code:n = {
-    \keys_store:NN \int_gset:Nn #1
-  },
-  \c_keys_properties_path_tlp /.gstore~in~int:c/.code:n = {
-    \keys_store:Nc \int_gset:cn {#1}
-  },
-  \c_keys_properties_path_tlp /.gstore~in~skip:N/.code:n = {
-    \keys_store:NN \skip_gset:Nn #1
-  },
-  \c_keys_properties_path_tlp /.gstore~in~skip:c/.code:n = {
-    \keys_store:Nc \skip_gset:cn {#1}
-  },
-  \c_keys_properties_path_tlp /.gstore~in~toks:N/.code:n = {
-    \keys_store:NN \toks_gset:Nn #1
-  },
-  \c_keys_properties_path_tlp /.gstore~in~toks:c/.code:n = {
-    \keys_store:Nc \toks_gset:cn {#1}
-  },
+%  \c_keys_properties_path_tlp /.gstore~in~tlp:N/.code:n = {
+%    \keys_store:NN \tlp_gset:Nn #1
+%  },
+%  \c_keys_properties_path_tlp /.xstore~in~tlp:N/.code:n = {
+%    \keys_store:NN \tlp_gset:Nx #1
+%  },
+%  \c_keys_properties_path_tlp /.gstore~in~tlp:c/.code:n = {
+%    \keys_store:Nc \tlp_gset:cn {#1}
+%  },
+%  \c_keys_properties_path_tlp /.xstore~in~tlp:c/.code:n = {
+%    \keys_store:Nc \tlp_gset:cx {#1}
+%  },
+%  \c_keys_properties_path_tlp /.gstore~in~int:N/.code:n = {
+%    \keys_store:NN \int_gset:Nn #1
+%  },
+%  \c_keys_properties_path_tlp /.gstore~in~int:c/.code:n = {
+%    \keys_store:Nc \int_gset:cn {#1}
+%  },
+%  \c_keys_properties_path_tlp /.gstore~in~skip:N/.code:n = {
+%    \keys_store:NN \skip_gset:Nn #1
+%  },
+%  \c_keys_properties_path_tlp /.gstore~in~skip:c/.code:n = {
+%    \keys_store:Nc \skip_gset:cn {#1}
+%  },
+%  \c_keys_properties_path_tlp /.gstore~in~toks:N/.code:n = {
+%    \keys_store:NN \toks_gset:Nn #1
+%  },
+%  \c_keys_properties_path_tlp /.gstore~in~toks:c/.code:n = {
+%    \keys_store:Nc \toks_gset:cn {#1}
+%  },
 %    \end{macrocode}
 % Functions should not be stored in tlps.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.let~to~func:N/.code:n = {
-    \keys_parse_list:n {
-      \c_keys_properties_path_tlp /.code:n = {
-        \let:NN #1 ##1
-      }
-    }
-  },
-  \c_keys_properties_path_tlp /.let~to~func:c/.code:n = {
-    \keys_module_name:
-    \keys_parse_list:n {
-      \c_keys_properties_path_tlp /.code:x = {
-        \exp_not:N \let:cN {\l_keys_tmpa_tlp #1:w} ##1
-      }
-    }
-  },
+%  \c_keys_properties_path_tlp /.let~to~func:N/.code:n = {
+%    \keys_parse_list:n {
+%      \c_keys_properties_path_tlp /.code:n = {
+%        \let:NN #1 ##1
+%      }
+%    }
+%  },
+%  \c_keys_properties_path_tlp /.let~to~func:c/.code:n = {
+%    \keys_module_name:
+%    \keys_parse_list:n {
+%      \c_keys_properties_path_tlp /.code:x = {
+%        \exp_not:N \let:cN {\l_keys_tmpa_tlp #1:w} ##1
+%      }
+%    }
+%  },
 %    \end{macrocode} 
 % Boolean keys are created with a true default.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.boolean:N/.code:n = {
-    \keys_boolean:nN {set} #1
-  },
-  \c_keys_properties_path_tlp /.boolean:c/.code:n = {
-    \keys_boolean:nc {set} {#1}
-  },
+%  \c_keys_properties_path_tlp /.boolean:N/.code:n = {
+%    \keys_boolean:nN {set} #1
+%  },
+%  \c_keys_properties_path_tlp /.boolean:c/.code:n = {
+%    \keys_boolean:nc {set} {#1}
+%  },
 %    \end{macrocode}
 % Once again global versions.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.gboolean:N/.code:n = {
-    \keys_boolean:nN {gset} #1
-  },
-  \c_keys_properties_path_tlp /.gboolean:c/.code:n = {
-    \keys_boolean:nc {gset} {#1}
-  },
+%  \c_keys_properties_path_tlp /.gboolean:N/.code:n = {
+%    \keys_boolean:nN {gset} #1
+%  },
+%  \c_keys_properties_path_tlp /.gboolean:c/.code:n = {
+%    \keys_boolean:nc {gset} {#1}
+%  },
 %    \end{macrocode}
 % Creating an inverse needs a little work as the logic needs to be
 % reversed.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.inverse~key:n/.code:n = {
-    \keys_if_really_exist:nTF {\l_keys_current_path_tlp /._boolean} {
-      \tlp_set_eq:NN \l_keys_tmpa_tlp \l_keys_current_path_tlp
-      \tlp_set_eq:NN \l_keys_current_key_full_tlp \l_keys_current_path_tlp
-      \keys_separate_path:
-      \keys_parse_list:n {
-        \l_keys_current_path_tlp /#1/.code:x = {
-          \exp_not:N \tlist_if_eq:nnTF {true} {##1} {
-            \exp_not:N \bool_set_false:N \keys_use:n
-              {\l_keys_tmpa_tlp /._boolean}
-          }{
-            \exp_not:N \tlist_if_eq:nnTF {false} {##1} {
-              \exp_not:N \bool_set_true:N \keys_use:n
-                {\l_keys_tmpa_tlp /._boolean}
-            }{
-              \exp_not:n {
-                \keys_err_use:cw {boolean_expected}
-                  \l_keys_current_key_full_tlp
-                  {\toks_use:N \l_keys_current_value_toks}
-              }
-            }
-          }
-        },
-        \l_keys_current_path_tlp /#1/.default:n = true
-      }
-    }{
-      \keys_err_use:cw {not_boolean} \l_keys_current_path_tlp
-    }
-  },
+%  \c_keys_properties_path_tlp /.inverse~key:n/.code:n = {
+%    \keys_if_really_exist:nTF {\l_keys_current_path_tlp /._boolean} {
+%      \tlp_set_eq:NN \l_keys_tmpa_tlp \l_keys_current_path_tlp
+%      \tlp_set_eq:NN \l_keys_current_key_full_tlp \l_keys_current_path_tlp
+%      \keys_separate_path:
+%      \keys_parse_list:n {
+%        \l_keys_current_path_tlp /#1/.code:x = {
+%          \exp_not:N \tlist_if_eq:nnTF {true} {##1} {
+%            \exp_not:N \bool_set_false:N \keys_use:n
+%              {\l_keys_tmpa_tlp /._boolean}
+%          }{
+%            \exp_not:N \tlist_if_eq:nnTF {false} {##1} {
+%              \exp_not:N \bool_set_true:N \keys_use:n
+%                {\l_keys_tmpa_tlp /._boolean}
+%            }{
+%              \exp_not:n {
+%                \keys_err_use:cw {boolean_expected}
+%                  \l_keys_current_key_full_tlp
+%                  {\toks_use:N \l_keys_current_value_toks}
+%              }
+%            }
+%          }
+%        },
+%        \l_keys_current_path_tlp /#1/.default:n = true
+%      }
+%    }{
+%      \keys_err_use:cw {not_boolean} \l_keys_current_path_tlp
+%    }
+%  },
 %    \end{macrocode}
 % Choices are handled in a slightly different way.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.choice:/.code:n = {
-    \keys_manage_internal:n {
-      \l_keys_current_path_tlp /.cd:,
-      .code:n = {
-        \tlp_set:Nn \l_keys_current_choice_tlp {##1}
-        \int_zero:N \l_keys_current_choice_int
-        \exp_args:No \keys_parse_list:n {\l_keys_current_key_full_tlp /##1}
-      },
-      unknown/.code:n = {
-        \keys_err_use:cw {unknown_choice} \l_keys_current_path_tlp
-          {\l_keys_current_key_name_tlp}
-      }
-    }
-  },
+%  \c_keys_properties_path_tlp /.choice:/.code:n = {
+%    \keys_manage_internal:n {
+%      \l_keys_current_path_tlp /.cd:,
+%      .code:n = {
+%        \tlp_set:Nn \l_keys_current_choice_tlp {##1}
+%        \int_zero:N \l_keys_current_choice_int
+%        \exp_args:No \keys_parse_list:n {\l_keys_current_key_full_tlp /##1}
+%      },
+%      unknown/.code:n = {
+%        \keys_err_use:cw {unknown_choice} \l_keys_current_path_tlp
+%          {\l_keys_current_key_name_tlp}
+%      }
+%    }
+%  },
 %    \end{macrocode}
 % Multiple choices can also be created.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.choices:nn/.code:nn = {#1#2} {
-    \tlp_set_eq:NN \l_keys_choice_path_tlp \l_keys_current_path_tlp
-    \toks_set:Nn \l_keys_body_toks {#2}
-    \int_zero:N \l_keys_current_choice_int
-    \clist_map_function:nN {#1} \keys_choice_create:n
-    \keys_manage_internal:n {
-      \l_keys_choice_path_tlp  /.choice:
-    }
-  },
+%  \c_keys_properties_path_tlp /.choices:nn/.code:nn = {#1#2} {
+%    \tlp_set_eq:NN \l_keys_choice_path_tlp \l_keys_current_path_tlp
+%    \toks_set:Nn \l_keys_body_toks {#2}
+%    \int_zero:N \l_keys_current_choice_int
+%    \clist_map_function:nN {#1} \keys_choice_create:n
+%    \keys_manage_internal:n {
+%      \l_keys_choice_path_tlp  /.choice:
+%    }
+%  },
 %    \end{macrocode}
 % Different names for the same thing.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.equivalent~key:n/.code:n = {
-    \keys_if_really_exist:nT {\l_keys_current_path_tlp /._cmd:w} {
-      \tlp_set_eq:NN \l_keys_current_key_full_tlp \l_keys_current_path_tlp
-      \keys_separate_path:
-      \keys_set_eq:nn {\l_keys_current_path_tlp /#1/._cmd:w}
-        {\l_keys_current_key_full_tlp /._cmd:w}
-    }
-  },
+%  \c_keys_properties_path_tlp /.equivalent~key:n/.code:n = {
+%    \keys_if_really_exist:nT {\l_keys_current_path_tlp /._cmd:w} {
+%      \tlp_set_eq:NN \l_keys_current_key_full_tlp \l_keys_current_path_tlp
+%      \keys_separate_path:
+%      \keys_set_eq:nn {\l_keys_current_path_tlp /#1/._cmd:w}
+%        {\l_keys_current_key_full_tlp /._cmd:w}
+%    }
+%  },
 %    \end{macrocode}
 % Expansion keys need to be available.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.expand:o/.code:n = {
-    \exp_args:No \keys_expand:n {#1}
-  },
-  \c_keys_properties_path_tlp /.expand:d/.code:n = {
-    \exp_args:NNo \exp_args:No \keys_expand:n {#1}
-  },
-  \c_keys_properties_path_tlp /.expand:x/.code:n = {
-    \exp_args:Nx \keys_expand:n {#1}
-  },
+%  \c_keys_properties_path_tlp /.expand:o/.code:n = {
+%    \exp_args:No \keys_expand:n {#1}
+%  },
+%  \c_keys_properties_path_tlp /.expand:d/.code:n = {
+%    \exp_args:NNo \exp_args:No \keys_expand:n {#1}
+%  },
+%  \c_keys_properties_path_tlp /.expand:x/.code:n = {
+%    \exp_args:Nx \keys_expand:n {#1}
+%  },
 %    \end{macrocode}
 % ``Trying'' a key.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.try:n/.code:n = {\keys_try:},
-  \c_keys_properties_path_tlp /.retry:n/.code:n = {
-    \bool_if:NF \l_keys_success_bool {\keys_try:}
-  },
+%  \c_keys_properties_path_tlp /.try:n/.code:n = {\keys_try:},
+%  \c_keys_properties_path_tlp /.retry:n/.code:n = {
+%    \bool_if:NF \l_keys_success_bool {\keys_try:}
+%  },
 %    \end{macrocode}
 %
 % Some debugging keys.
 %    \begin{macrocode}
-  \c_keys_properties_path_tlp /.show~code:/.code:n = {
-    \cs_show:c {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp /._cmd:w}
-  },
-  \c_keys_properties_path_tlp /.show:/.code:n = {
-    \cs_show:c {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp}
-  },
+%  \c_keys_properties_path_tlp /.show~code:/.code:n = {
+%    \cs_show:c {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp /._cmd:w}
+%  },
+%  \c_keys_properties_path_tlp /.show:/.code:n = {
+%    \cs_show:c {\c_keys_cs_prefix_tlp \l_keys_current_path_tlp}
+%  },
 %    \end{macrocode}
 % Keys for programmers.
 %    \begin{macrocode}
-  \c_keys_utilities_path_tlp /execute:n/.code:n = {#1},
-  \c_keys_utilities_path_tlp /current~module:n/.store~in~tlp:N =
-    \l_keys_current_module_tlp
+%  \c_keys_utilities_path_tlp /execute:n/.code:n = {#1},
+%  \c_keys_utilities_path_tlp /current~module:n/.store~in~tlp:N =
+%    \l_keys_current_module_tlp
 }
 %</package>
 %    \end{macrocode}
